--- a/style.css
+++ b/style.css
@@ -428,4 +428,20 @@ section{
     .projects-card{
         
     }
+    .projects-box{
+        display: grid;
+        grid-template-columns: repeat(auto-fit,minmax(350px, 1fr));
+        place-items: center;
+        gap: 3rem;
+        row-gap: 5rem;
+    }
+}
+@media (max-width:468px) {
+    .projects-box{
+        display: grid;
+        grid-template-columns: repeat(auto-fit,minmax(250px, 1fr));
+        place-items: center;
+        gap: 3rem;
+        row-gap: 5rem;
+    }
 }
