--- a/style.css
+++ b/style.css
@@ -275,6 +275,7 @@ section{
     cursor: pointer;
     box-shadow: 0 0 5px var(--main-color);
     transition: 0.3s ease-in-out;
+    height: 600px;
     
 }
 
